Add connection to pokemon gym
