# src/routes/router.ts
@@ -8,8 +8,7 @@ const logger = new Logger();
 
 router.put('/pokemon/iniciar', logger.logRequest(), PokemonController.setPokemonAttributes);
 
-router.get('/pokemon/enemigos', logger.logRequest(), PokemonController.getPokemonEnemies);
 router.get('/pokemon/info', logger.logRequest(), PokemonController.getPokemonInfo);
 
 router.post('/pokemon/atacar', logger.logRequest(), PokemonController.sendPokemonAttack);
-router.post('/pokemon/unirse-a-partida', logger.logRequest(), PokemonController.addToBattle);
+router.post('/pokemon/unirse', logger.logRequest(), PokemonController.joinToBattle);
