# src/routes/swagger.json
@@ -30,98 +30,54 @@
                 "data": {
                   "type": "object",
                   "example": {
-                    "pokemon": {
-                      "id": 1,
-                      "name": "Charizard",
-                      "type": "fuego",
-                      "life": 100,
-                      "attacks": [
+                    "id": 1,
+                    "name": "Charizard",
+                    "type": "fuego",
+                    "life": 100,
+                    "attacks": [
+                      {
+                        "type": "fuego",
+                        "power": 100
+                      },
+                      {
+                        "type": "agua",
+                        "power": 80
+                      },
+                      {
+                        "type": "normal",
+                        "power": 20
+                      },
+                      {
+                        "type": "planta",
+                        "power": 80
+                      }
+                    ],
+                    "state": "disponible",
+                    "enemies": {
+                      "type": "array",
+                      "example": [
                         {
-                          "type": "fuego",
-                          "power": 100
-                        },
-                        {
+                          "id": 1,
+                          "name": "Blastoise",
                           "type": "agua",
-                          "power": 80
+                          "life": 100
                         },
                         {
-                          "type": "normal",
-                          "power": 20
-                        },
-                        {
+                          "id": 2,
+                          "name": "Venasaur",
                           "type": "planta",
-                          "power": 80
+                          "life": 100
+                        },
+                        {
+                          "id": 3,
+                          "name": "Nidoran",
+                          "type": "normal",
+                          "life": 100
                         }
                       ]
                     },
-                    "status": "disponible",
-                    "player": "Renato"
+                    "gymState": "LOBBY"
                   }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal server error",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "error"
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Internal server error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/pokemon/enemigos": {
-      "get": {
-        "tags": [
-          "Pokemon"
-        ],
-        "summary": "Get info about the Pokemon enemies",
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "success"
-                },
-                "message": {
-                  "type": "string",
-                  "example": ""
-                },
-                "data": {
-                  "type": "array",
-                  "example": [
-                    {
-                      "id": 1,
-                      "name": "Blastoise",
-                      "type": "agua",
-                      "life": 100
-                    },
-                    {
-                      "id": 2,
-                      "name": "Venasaur",
-                      "type": "planta",
-                      "life": 100
-                    },
-                    {
-                      "id": 3,
-                      "name": "Nidoran",
-                      "type": "normal",
-                      "life": 100
-                    }
-                  ]
                 }
               }
             }
@@ -159,40 +115,31 @@
             "required": true,
             "schema": {
               "type": "object",
-              "properties": {
-                "player": {
+              "properties":  {
+                "name": {
                   "type": "string",
-                  "example": "Renato"
+                  "example": "Charizard"
                 },
-                "pokemon": {
-                  "type": "object",
-                  "example": {
-                    "name": {
-                      "type": "string",
-                      "example": "Charizard"
-                    },
-                    "type": {
-                      "type": "string",
-                      "example": "fire"
-                    },
-                    "life": {
-                      "type": "integer",
-                      "example": 200
-                    },
-                    "attacks": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "type": {
-                            "type": "string",
-                            "example": "fuego"
-                          },
-                          "power": {
-                            "type": "integer",
-                            "example": 100
-                          }
-                        }
+                "type": {
+                  "type": "string",
+                  "example": "fire"
+                },
+                "life": {
+                  "type": "integer",
+                  "example": 200
+                },
+                "attacks": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "type": {
+                        "type": "string",
+                        "example": "fuego"
+                      },
+                      "power": {
+                        "type": "integer",
+                        "example": 100
                       }
                     }
                   }
@@ -272,9 +219,9 @@
                   "type": "integer",
                   "example": 1
                 },
-                "pokemonId": {
-                  "type": "integer",
-                  "example": 1
+                "targetPlayer": {
+                  "type": "string",
+                  "example": "Ash"
                 }
               }
             }
@@ -347,7 +294,7 @@
         }
       }
     },
-    "/pokemon/unirse-a-partida": {
+    "/pokemon/unirse": {
       "post": {
         "tags": [
           "Battle"
@@ -371,7 +318,7 @@
             }
           },
           "400": {
-            "description": "Error response when the Pokemon status is not 'disponible'",
+            "description": "Error response when the Pokemon state is not 'disponible'",
             "schema": {
               "type": "object",
               "properties": {
@@ -404,6 +351,6 @@
           }
         }
       }
-    },
+    }
   }
 }
